fix template hide docs route
